# LexiLocal

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  data_exploration.py  document_processor.py  instructions.md  legal_docs_index.faiss  legal_docs_index_metadata.pkl  mock_data.py  pyproject.toml  rag_system.py  requirements-dev.txt  requirements.txt  setup.py
config/: __init__.py  settings.py
docs/: API.md  ARCHITECTURE.md
scripts/: performance_test.py  run_performance_test.py  start_app.py
src/lexilocal/: __init__.py
src/lexilocal/core/: __init__.py  document_processor.py  rag_system.py
src/lexilocal/data/: __init__.py  data_exploration.py  dataset_loader.py
src/lexilocal/ui/: __init__.py  streamlit_app.py
src/lexilocal/utils/: __init__.py  logging_config.py  performance_metrics.py  streamlit_fixes.py
tests/: __init__.py  test_document_processor.py  test_rag_system.py
