[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexilocal"
version = "1.0.0"
description = "AI-Powered Legal Document Summarization and Q&A with Local LLM Optimization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dylan Satow", email = "your.email@example.com"}
]
keywords = ["legal", "ai", "llm", "rag", "document-analysis", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.9"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-ollama",
    "langgraph",
    "sentence-transformers",
    "faiss-cpu",
    "streamlit",
    "ollama",
    "python-dotenv",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0",
    "pytest-cov>=4.0",
]
gpu = [
    "faiss-gpu",
]

[project.scripts]
lexilocal = "lexilocal.ui.streamlit_app:main"
lexilocal-test = "scripts.run_performance_test:main"

[project.urls]
Homepage = "https://github.com/DylanSatow/LexiLocal"
Repository = "https://github.com/DylanSatow/LexiLocal"
Issues = "https://github.com/DylanSatow/LexiLocal/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["lexilocal"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"